request api test.

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "iview": "^2.6.0",
     "js-cookie": "^2.2.0",
+    "qs": "^6.5.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
